{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "df70fa95-8a34-4494-b137-73ab6b9c7d37",
            "actions": [
                {
                    "name": "StartMovement",
                    "type": "PassThrough",
                    "id": "2965d113-c759-47ea-805c-d4fd291fdc7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveHorizontally",
                    "type": "PassThrough",
                    "id": "351f2ccd-1f9f-44bf-9bec-d62ac5c5f408",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveVertically",
                    "type": "PassThrough",
                    "id": "dbe8ac54-82d2-4531-bd5d-554f4c139374",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "PassThrough",
                    "id": "10ae6d35-b928-4093-a835-983549ee61c7",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "756cbbcc-ea06-4994-bea9-97ad5e562391",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartPan",
                    "type": "PassThrough",
                    "id": "ffa61f0f-776e-4181-8da0-0132ccb7191c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pan",
                    "type": "Value",
                    "id": "390b820d-5a36-4016-9edc-7f504681617e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "053f86fe-ff7b-4f92-a33c-5b246052d384",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WSAD",
                    "id": "ff95eb3c-f8cb-4bd2-bb2e-56334ca848db",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontally",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b3cd9582-7498-4fa0-b8ab-3a3c8c6eeb5a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "05c47826-55a9-4558-9455-52493bc1a8f1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d2f45951-ea9b-43ab-b0cb-28538d8504d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3749c1c5-4206-4fcd-ba09-af8b962f53f8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveHorizontally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE",
                    "id": "68f98ef1-e1fd-44f8-ad74-57bd03c217ff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertically",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "d7f7925d-904a-4f6a-ad67-021330ae5dbb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "9db49b2c-d2ba-48da-b6c0-f886a98d1ca1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MoveVertically",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "44905fde-0ac2-4ff0-92e3-c06f028bd91a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5773504-d819-4e55-9137-9621d91cf241",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "StartMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ee3bcb4-5b08-45ff-9195-efadff2c2466",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "StartPan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8170e75d-958b-43ca-83ee-e781bc46e9be",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}